# RegEXANN

./: .gitignore  1.sh  README.md  USAGE.md  requirements.txt  sift.sh  siftsmall.sh
 scripts/: run_experiment.sh  sweep_clusters.sh
dataset/: arxiv.py  clean.py  dbpedia.py  download_raw.sh  evaluate_recall.py  gen_query.py  gen_query_strict_style.py  gist.py  gt.py  laion.py  sift.py  song.py  stringmy.py  vecgen.py  vecinfo.py  words.py
exp/: CMakeLists.txt
exp/include/: Baseline.h  Eval.h  GraphIndex.h  HierarchicalIndex.h  Index.h  KMeans.h  PQ.h  RegexParser.h  Search.h  Serialize.h
exp/src/: Baseline.cpp  Eval.cpp  GraphIndex.cpp  HierarchicalIndex.cpp  Index.cpp  KMeans.cpp  PQ.cpp  RegexParser.cpp  Search.cpp  Serialize.cpp  eval_main.cpp  main.cpp
scripts/: es_index.py  es_query.py  gen_queries_all.sh  pg_load.py  pg_load_hnsw.py  pg_query.py  pg_query_hnsw.py  run.sh  run_all.sh  run_all_profile.sh  run_arxiv.sh  run_audio.sh  run_baselines.sh  run_dbpedia.sh  run_es_baseline.sh  run_experiment.sh  run_gist.sh  run_laion.sh  run_laion_postfilter_append.sh  run_msong.sh  run_pg_es_all.sh  run_pg_hnsw_all.sh  run_pgl.sh  run_regexann_ef_all.sh  run_sift.sh  run_sift_cluster_ef_sweep.sh  run_sift_pattern_classes.sh  run_siftsmall.sh  run_tripclick.sh  run_words.sh  sweep_params.sh
scripts/datasets/: run_arxiv.sh  run_audio.sh  run_dbpedia.sh  run_gist.sh  run_laion.sh  run_msong.sh  run_sift.sh  run_words.sh
scripts/pgvector/: run_pg_hnsw_all.sh
tools/: eval_recall.py  gen_queries.py  plot_recall_qps.py  prepare_dataset.py
